Fixed the margin on the footer
Added a bit of top margin on the footer because it was overlapping the
form on mobile.

--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -20,3 +20,7 @@
 .fa-linkedin-square:hover {
     color: #0077B5;
 }
+
+.footer {
+    margin-top: 10px;
+}
